--- a/FM.html
+++ b/FM.html
@@ -73,6 +73,9 @@
     <button onclick="confirmReset()">Reinicio</button>
     <button id="lockButton" onclick="toggleLock()">Bloqueado</button>
     <button id="offOnButton" onclick="toggleOffOn()">OFF</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/FM.html'">FM</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/SM.html'">SM</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/ST.html'">ST</button>
     <div>
         <input type="text" id="serverUrl" placeholder="Ingrese la URL del servidor" style="width: 300px;">
         <button onclick="loadDataFromServer()">Cargar desde Servidor</button>
