--- a/index.html
+++ b/index.html
@@ -1,1 +1,349 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Cuadrícula Interactiva</title>
+    <style>
+        #grid {
+            display: grid;
+            grid-template-columns: repeat(16, 50px);
+            grid-template-rows: repeat(8, 50px);
+            gap: 2px;
+        }
+        .cell {
+            border: 1px solid black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            box-sizing: border-box;
+            min-width: 50px;
+            min-height: 50px;
+        }
+        .cell:hover {
+            background-color: #f0f0f0;
+        }
+        .cell.text {
+            font-size: 16px;
+        }
+        .cell.text.pb {
+            background-color: orange;
+            color: black;
+        }
+        .cell.text.fse, .cell.text.be, .cell.text.t {
+            background-color: lightblue;
+            color: black;
+        }
+        .cell.text.cf {
+            background-color: darkgreen;
+            color: white;
+        }
+        .cell.text.vl {
+            background-color: black;
+            color: white;
+        }
+        .cell.text.h {
+            background-color: black;
+            color: white;
+        }
+        .circle {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+        }
+        .highlighted {
+            background-color: yellow;
+        }
+        #lockButton {
+            background-color: red;
+            color: white;
+            padding: 5px 10px;
+            margin-left: 10px;
+        }
+        #lockButton.unlocked {
+            background-color: green;
+        }
+        #offOnButton {
+            background-color: red;
+            color: white;
+            padding: 5px 10px;
+            margin-left: 10px;
+        }
+        #offOnButton.on {
+            background-color: green;
+        }
+    </style>
+</head>
+<body>
+    <div id="grid"></div>
+    <button id="saveButton">Guardar Datos</button>
+    <button id="loadButton">Cargar Datos</button>
+    <button id="resetButton">Reinicio</button>
+    <button id="lockButton">Bloqueado</button>
+    <button id="offOnButton">OFF</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/FM.html'">FM</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/SM.html'">SM</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/ST.html'">ST</button>
+    <div>
+        <input type="text" id="serverUrl" placeholder="Ingrese la URL del servidor" style="width: 300px;">
+        <button id="serverLoadButton">Cargar desde Servidor</button>
+    </div>
+    <script>
+        const GRID_SIZE = 144;
+        const COLUMNS = 16;
+        const COLORS = ['red', 'green', 'yellow', 'darkblue', 'lightblue', 'gray', 'orange', 'black'];
+        const TEXT_MAPPING = {
+            1: 'PB1', 2: 'PB2', 3: 'PB3', 4: 'FSE1', 5: 'FSE2', 6: 'BE', 7: 'CF1', 8: 'CF2',
+            9: 'T1', 10: 'T2', 11: 'T3', 12: 'T4', 13: 'T5', 14: 'T6', 15: 'VL', 16: ' ',
+            32: 'H15', 48: 'H16', 64: 'H17', 80: 'H18', 96: 'H19', 112: 'H20', 128: 'H21', 144: 'H22'
+        };
+        const COLOR_TEXT_MAPPING = {
+            gray: { text: '1/2', color: 'black' },
+            yellow: { text: 'L', color: 'black' },
+            black: { text: 'C', color: 'white' },
+            lightblue: { text: 'Bad', color: 'black' },
+            darkblue: { text: 'B', color: 'white' },
+            orange: { text: 'Vb', color: 'black' },
+            red: { text: (row) => {
+                const textIndex = (row + 1) * COLUMNS;
+                const text = TEXT_MAPPING[textIndex] || '';
+                return text.replace('H', '');
+            }, color: 'white' },
+            green: { text: '', color: '' }
+        };
 
+        const grid = document.getElementById('grid');
+        let highlightedRows = new Set();
+        let highlightedColumns = new Set();
+        let isLocked = true;
+        let isOffOnActive = false;
+
+        // Inicializar la cuadrícula
+        for (let i = 1; i <= GRID_SIZE; i++) {
+            const cell = document.createElement('div');
+            cell.classList.add('cell');
+            cell.dataset.column = (i - 1) % COLUMNS;
+            cell.dataset.row = Math.floor((i - 1) / COLUMNS);
+
+            if (TEXT_MAPPING[i]) {
+                cell.textContent = TEXT_MAPPING[i];
+                cell.classList.add('text');
+                if (['PB1', 'PB2', 'PB3'].includes(TEXT_MAPPING[i])) {
+                    cell.classList.add('pb');
+                } else if (['FSE1', 'FSE2', 'BE'].includes(TEXT_MAPPING[i])) {
+                    cell.classList.add('fse', 'be');
+                } else if (['CF1', 'CF2'].includes(TEXT_MAPPING[i])) {
+                    cell.classList.add('cf');
+                } else if (['T1', 'T2', 'T3', 'T4', 'T5', 'T6'].includes(TEXT_MAPPING[i])) {
+                    cell.classList.add('t');
+                } else if (TEXT_MAPPING[i] === 'VL') {
+                    cell.classList.add('vl');
+                } else if (TEXT_MAPPING[i].startsWith('H')) {
+                    cell.classList.add('h');
+                }
+                if (i <= COLUMNS) {
+                    cell.addEventListener('click', () => toggleHighlight(cell.dataset.column, 'column'));
+                } else if (i % COLUMNS === 0) {
+                    cell.addEventListener('click', () => toggleHighlight(cell.dataset.row, 'row'));
+                }
+            } else {
+                const circle = document.createElement('div');
+                circle.classList.add('circle');
+                cell.appendChild(circle);
+                updateCircleColor(circle, i);
+                cell.addEventListener('click', () => {
+                    if (!isLocked) {
+                        updateCircleOnClick(circle, i);
+                    }
+                });
+            }
+            grid.appendChild(cell);
+        }
+
+        // Asignar eventos a los botones
+        document.getElementById('saveButton').addEventListener('click', saveData);
+        document.getElementById('loadButton').addEventListener('click', loadData);
+        document.getElementById('resetButton').addEventListener('click', confirmReset);
+        document.getElementById('lockButton').addEventListener('click', toggleLock);
+        document.getElementById('offOnButton').addEventListener('click', toggleOffOn);
+        document.getElementById('serverLoadButton').addEventListener('click', loadDataFromServer);
+
+        function toggleLock() {
+            isLocked = !isLocked;
+            const lockButton = document.getElementById('lockButton');
+            lockButton.textContent = isLocked ? 'Bloqueado' : 'Desbloqueado';
+            lockButton.classList.toggle('unlocked', !isLocked);
+        }
+
+        function toggleOffOn() {
+            isOffOnActive = !isOffOnActive;
+            const offOnButton = document.getElementById('offOnButton');
+            offOnButton.textContent = isOffOnActive ? 'ON' : 'OFF';
+            offOnButton.classList.toggle('on', isOffOnActive);
+        }
+
+        function toggleHighlight(index, type) {
+            const set = type === 'column' ? highlightedColumns : highlightedRows;
+            if (set.has(index)) {
+                set.delete(index);
+            } else {
+                set.clear();
+                set.add(index);
+            }
+            updateGridBackground();
+        }
+
+        function updateGridBackground() {
+            for (let i = 0; i < grid.children.length; i++) {
+                const cell = grid.children[i];
+                cell.classList.remove('highlighted');
+                if (highlightedRows.has(cell.dataset.row) || highlightedColumns.has(cell.dataset.column)) {
+                    cell.classList.add('highlighted');
+                }
+            }
+        }
+
+        function updateCircleColor(circle, index) {
+            const savedColor = localStorage.getItem(`arche_colorM${index}`);
+            const colorIndex = (index - 17) % COLORS.length;
+            const defaultColor = COLORS[colorIndex >= 0 ? colorIndex : 0];
+            const color = savedColor || defaultColor;
+            circle.style.backgroundColor = color;
+            updateCircleText(circle, color, Math.floor((index - 1) / COLUMNS));
+            if (!savedColor) {
+                localStorage.setItem(`arche_colorM${index}`, color);
+            }
+        }
+
+        function updateCircleOnClick(circle, index) {
+            if (isOffOnActive) {
+                circle.style.backgroundColor = 'red';
+                localStorage.setItem(`arche_colorM${index}`, 'red');
+                updateCircleText(circle, 'red', Math.floor((index - 1) / COLUMNS));
+            } else {
+                const currentColor = circle.style.backgroundColor;
+                const nextColorIndex = (COLORS.indexOf(currentColor) + 1) % COLORS.length;
+                const newColor = COLORS[nextColorIndex];
+                circle.style.backgroundColor = newColor;
+                localStorage.setItem(`arche_colorM${index}`, newColor);
+                updateCircleText(circle, newColor, Math.floor((index - 1) / COLUMNS));
+            }
+        }
+
+        function updateCircleText(circle, color, row) {
+            const mapping = COLOR_TEXT_MAPPING[color];
+            if (mapping) {
+                const text = typeof mapping.text === 'function' ? mapping.text(row) : mapping.text;
+                circle.textContent = text || '';
+                circle.style.color = mapping.color || '';
+            } else {
+                circle.textContent = '';
+                circle.style.color = '';
+            }
+        }
+
+        function saveData() {
+            const data = [];
+            for (let i = 0; i < grid.children.length; i++) {
+                const cell = grid.children[i];
+                const circle = cell.querySelector('.circle');
+                if (circle) {
+                    data.push({ index: i + 1, color: circle.style.backgroundColor });
+                }
+            }
+            const today = new Date();
+            const day = String(today.getDate()).padStart(2, '0');
+            const month = String(today.getMonth() + 1).padStart(2, '0');
+            const year = String(today.getFullYear()).slice(-2);
+            const formattedDate = `${day}/${month}/${year}`;
+            const fileName = `fuentezT_${formattedDate}.json`;
+            const blob = new Blob([JSON.stringify(data)], { type: 'application/json' });
+            const a = document.createElement('a');
+            a.href = URL.createObjectURL(blob);
+            a.download = fileName;
+            a.click();
+        }
+
+        function loadData() {
+            const input = document.createElement('input');
+            input.type = 'file';
+            input.accept = 'application/json';
+            input.onchange = function(event) {
+                const file = event.target.files[0];
+                if (!file) return;
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    try {
+                        const data = JSON.parse(e.target.result);
+                        processData(data);
+                    } catch (error) {
+                        alert('Error al procesar el archivo: ' + error.message);
+                    }
+                };
+                reader.readAsText(file);
+            };
+            input.click();
+        }
+
+        function loadDataFromServer() {
+            const url = document.getElementById('serverUrl').value.trim();
+            if (!url) {
+                alert('Por favor, ingrese una URL válida.');
+                return;
+            }
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) throw new Error('Error al cargar los datos desde el servidor.');
+                    return response.json();
+                })
+                .then(data => {
+                    processData(data);
+                    alert('Datos cargados exitosamente desde el servidor.');
+                })
+                .catch(error => alert('Error: ' + error.message));
+        }
+
+        function processData(data) {
+            data.forEach(item => {
+                if (!item.index || !item.color) return;
+                const cell = grid.children[item.index - 1];
+                if (!cell) return;
+                const circle = cell.querySelector('.circle');
+                if (circle) {
+                    circle.style.backgroundColor = item.color;
+                    localStorage.setItem(`arche_colorM${item.index}`, item.color);
+                    updateCircleText(circle, item.color, Math.floor((item.index - 1) / COLUMNS));
+                }
+            });
+        }
+
+        function confirmReset() {
+            if (confirm('¿Estás seguro de que quieres reiniciar todos los círculos a rojo?')) {
+                resetCircles();
+            }
+        }
+
+        function resetCircles() {
+            for (let i = 0; i < grid.children.length; i++) {
+                const cell = grid.children[i];
+                const circle = cell.querySelector('.circle');
+                if (circle) {
+                    circle.style.backgroundColor = 'red';
+                    updateCircleText(circle, 'red', Math.floor(i / COLUMNS));
+                    localStorage.setItem(`arche_colorM${i + 1}`, 'red');
+                }
+            }
+        }
+    </script>
+</body>
+</html>
