--- a/FM.html
+++ b/FM.html
@@ -73,7 +73,7 @@
     <button onclick="confirmReset()">Reinicio</button>
     <button id="lockButton" onclick="toggleLock()">Bloqueado</button>
     <button id="offOnButton" onclick="toggleOffOn()">OFF</button>
-    <button onclick="window.location.href='https://yagopc.github.io/Reservas/FT.html'">FT</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/index.html'">FT</button>
     <button onclick="window.location.href='https://yagopc.github.io/Reservas/SM.html'">SM</button>
     <button onclick="window.location.href='https://yagopc.github.io/Reservas/ST.html'">ST</button>
     <div>
