--- a/FM.html
+++ b/FM.html
@@ -181,21 +181,21 @@
             updateCircleText(circle, color, Math.floor((index - 1) / COLUMNS));
             // Guardar el color en localStorage si no existía
             if (!savedColor) {
-                localStorage.setItem(`SM${index}`, color);
+                localStorage.setItem(`FM${index}`, color);
             }
         }
 
         function updateCircleOnClick(circle, index) {
             if (isOffOnActive) {
                 circle.style.backgroundColor = 'red';
-                localStorage.setItem(`SM${index}`, 'red');
+                localStorage.setItem(`FM${index}`, 'red');
                 updateCircleText(circle, 'red', Math.floor((index - 1) / COLUMNS));
             } else {
                 const currentColor = circle.style.backgroundColor;
                 const nextColorIndex = (COLORS.indexOf(currentColor) + 1) % COLORS.length;
                 const newColor = COLORS[nextColorIndex];
                 circle.style.backgroundColor = newColor;
-                localStorage.setItem(`SM${index}`, newColor);
+                localStorage.setItem(`FM${index}`, newColor);
                 updateCircleText(circle, newColor, Math.floor((index - 1) / COLUMNS));
             }
         }
@@ -281,7 +281,7 @@
                 const circle = cell.querySelector('.circle');
                 if (circle) {
                     circle.style.backgroundColor = item.color;
-                    localStorage.setItem(`arche_colorM${item.index}`, item.color);
+                    localStorage.setItem(`FM${item.index}`, item.color);
                     updateCircleText(circle, item.color, Math.floor((item.index - 1) / COLUMNS));
                 }
             });
@@ -300,7 +300,7 @@
                 if (circle) {
                     circle.style.backgroundColor = 'red';
                     updateCircleText(circle, 'red', Math.floor(i / COLUMNS));
-                    localStorage.setItem(`arche_colorM${i + 1}`, 'red');
+                    localStorage.setItem(`FM${i + 1}`, 'red');
                 }
             }
         }
