--- a/ST.html
+++ b/ST.html
@@ -131,7 +131,7 @@
 
         function updateCircleColor(circle, index) {
             const colorIndex = (index - 17) % COLORS.length;
-            const savedColor = localStorage.getItem(`arche_colorM${index}`);
+            const savedColor = localStorage.getItem(`ST${index}`);
             const color = savedColor || COLORS[colorIndex >= 0 ? colorIndex : 0];
             circle.style.backgroundColor = color;
             updateCircleText(circle, color, Math.floor((index - 1) / COLUMNS));
@@ -142,7 +142,7 @@
             const nextColorIndex = (COLORS.indexOf(currentColor) + 1) % COLORS.length;
             const newColor = COLORS[nextColorIndex];
             circle.style.backgroundColor = newColor;
-            localStorage.setItem(`arche_colorM${index}`, newColor);
+            localStorage.setItem(`ST${index}`, newColor);
             updateCircleText(circle, newColor, Math.floor((index - 1) / COLUMNS));
         }
 
@@ -170,7 +170,7 @@
             const blob = new Blob([JSON.stringify(data)], { type: 'application/json' });
             const a = document.createElement('a');
             a.href = URL.createObjectURL(blob);
-            a.download = 'Sarchedat.json';
+            a.download = 'ST.json';
             a.click();
         }
 
@@ -221,7 +221,7 @@
                 const circle = cell.querySelector('.circle');
                 if (circle) {
                     circle.style.backgroundColor = item.color;
-                    localStorage.setItem(`arche_colorM${item.index}`, item.color);
+                    localStorage.setItem(`ST${item.index}`, item.color);
                     updateCircleText(circle, item.color, Math.floor((item.index - 1) / COLUMNS));
                 }
             });
@@ -240,7 +240,7 @@
                 if (circle) {
                     circle.style.backgroundColor = 'red';
                     updateCircleText(circle, 'red', Math.floor(i / COLUMNS));
-                    localStorage.setItem(`arche_colorM${i + 1}`, 'red');
+                    localStorage.setItem(`ST${i + 1}`, 'red');
                 }
             }
         }
