--- a/ST.html
+++ b/ST.html
@@ -48,11 +48,14 @@
         }
     </style>
 </head>
-<body>
+    </body>
     <div id="grid"></div>
     <button onclick="saveData()">Guardar Datos</button>
     <button onclick="loadData()">Cargar Datos</button>
     <button onclick="confirmReset()">Reinicio</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/FT.html'">FT</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/FM.html'">FM</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/SM.html'">SM</button>
     <div>
         <input type="text" id="serverUrl" placeholder="Ingrese la URL del servidor" style="width: 300px;">
         <button onclick="loadDataFromServer()">Cargar desde Servidor</button>
