--- a/ST.html
+++ b/ST.html
@@ -53,7 +53,7 @@
     <button onclick="saveData()">Guardar Datos</button>
     <button onclick="loadData()">Cargar Datos</button>
     <button onclick="confirmReset()">Reinicio</button>
-    <button onclick="window.location.href='https://yagopc.github.io/Reservas/FT.html'">FT</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/index.html'">FT</button>
     <button onclick="window.location.href='https://yagopc.github.io/Reservas/FM.html'">FM</button>
     <button onclick="window.location.href='https://yagopc.github.io/Reservas/SM.html'">SM</button>
     <div>
