--- a/SM.html
+++ b/SM.html
@@ -54,7 +54,7 @@
     <button onclick="loadData()">Cargar Datos</button>
     <button onclick="confirmReset()">Reinicio</button>
     <button onclick="window.location.href='https://yagopc.github.io/Reservas/FM.html'">FM</button>
-    <button onclick="window.location.href='https://yagopc.github.io/Reservas/FT.html'">FT</button>
+    <button onclick="window.location.href='https://yagopc.github.io/Reservas/index.html'">FT</button>
     <button onclick="window.location.href='https://yagopc.github.io/Reservas/ST.html'">ST</button>
     <div>
         <input type="text" id="serverUrl" placeholder="Ingrese la URL del servidor" style="width: 300px;">
