--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         const COLOR_TEXT_MAPPING = {
             gray: { text: '1/2', color: 'black' },
             yellow: { text: 'L', color: 'black' },
-            black: { text: 'C', color: 'white' },
+            black: { text: 'F', color: 'white' },
             lightblue: { text: 'Bad', color: 'black' },
             darkblue: { text: 'B', color: 'white' },
             orange: { text: 'Vb', color: 'black' },
