--- a/ST.html
+++ b/ST.html
@@ -72,7 +72,7 @@
         const COLOR_TEXT_MAPPING = {
             gray: { text: '1/2', color: 'black' },
             yellow: { text: 'L', color: 'black' },
-            black: { text: 'C', color: 'white' },
+            black: { text: 'F', color: 'white' },
             cyan: { text: 'Bad', color: 'black' },
             blue: { text: 'B', color: 'white' },
             orange: { text: 'Vb', color: 'black' },
