--- a/ST.html
+++ b/ST.html
@@ -85,8 +85,8 @@
         const COLUMNS = 16;
         const COLORS = ['red', 'green', 'blue', 'cyan', 'yellow', 'gray', 'orange', 'black'];
         const TEXT_MAPPING = {
-            1: 'PC', 2: 'GIN', 3: 'P5', 4: 'P6', 5: 'PE', 6: 'PD1', 7: 'PD2', 8: 'PD3',
-            9: 'PD4', 10: 'CF', 11: 'S1', 12: 'S2', 13: 'S3', 14: 'FR ', 15: 'T', 16: ' ',
+            1: 'PC', 2: 'GIN', 3: 'P5', 4: 'P6', 5: 'PEX', 6: 'PD1', 7: 'PD2', 8: 'PD3',
+            9: 'PD4', 10: 'CF', 11: 'S1', 12: 'S2', 13: 'S3', 14: 'FR ', 15: 'T7', 16: ' ',
             32: '15', 48: '16', 64: '17', 80: '18', 96: '19', 112: '20', 128: '21', 144: '22'
         };
         const COLOR_TEXT_MAPPING = {
