--- a/FM.html
+++ b/FM.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <div id="grid"></div>
+  <div id="grid"></div>
     <button onclick="saveData()">Guardar Datos</button>
     <button onclick="loadData()">Cargar Datos</button>
     <button onclick="confirmReset()">Reinicio</button>
@@ -92,7 +92,7 @@
         const COLOR_TEXT_MAPPING = {
             gray: { text: '1/2', color: 'black' },
             yellow: { text: 'L', color: 'black' },
-            black: { text: 'F', color: 'white' },
+            black: { text: 'C', color: 'white' },
             lightblue: { text: 'Bad', color: 'black' },
             darkblue: { text: 'B', color: 'white' },
             orange: { text: 'Vb', color: 'black' },
@@ -175,27 +175,27 @@
         }
 
         function updateCircleColor(circle, index) {
-            const savedColor = localStorage.getItem(`SM${index}`);
+            const savedColor = localStorage.getItem(`arche_colorM${index}`);
             const color = savedColor || 'red'; // Rojo por defecto si no hay color guardado
             circle.style.backgroundColor = color;
             updateCircleText(circle, color, Math.floor((index - 1) / COLUMNS));
             // Guardar el color en localStorage si no existía
             if (!savedColor) {
-                localStorage.setItem(`FM${index}`, color);
+                localStorage.setItem(`arche_colorM${index}`, color);
             }
         }
 
         function updateCircleOnClick(circle, index) {
             if (isOffOnActive) {
                 circle.style.backgroundColor = 'red';
-                localStorage.setItem(`FM${index}`, 'red');
+                localStorage.setItem(`arche_colorM${index}`, 'red');
                 updateCircleText(circle, 'red', Math.floor((index - 1) / COLUMNS));
             } else {
                 const currentColor = circle.style.backgroundColor;
                 const nextColorIndex = (COLORS.indexOf(currentColor) + 1) % COLORS.length;
                 const newColor = COLORS[nextColorIndex];
                 circle.style.backgroundColor = newColor;
-                localStorage.setItem(`FM${index}`, newColor);
+                localStorage.setItem(`arche_colorM${index}`, newColor);
                 updateCircleText(circle, newColor, Math.floor((index - 1) / COLUMNS));
             }
         }
@@ -226,7 +226,7 @@
             const month = String(today.getMonth() + 1).padStart(2, '0');
             const year = String(today.getFullYear()).slice(-2);
             const formattedDate = `${day}/${month}/${year}`;
-            const fileName = `FM${formattedDate}.json`;
+            const fileName = `fuentezM_${formattedDate}.json`;
             const blob = new Blob([JSON.stringify(data)], { type: 'application/json' });
             const a = document.createElement('a');
             a.href = URL.createObjectURL(blob);
@@ -281,7 +281,7 @@
                 const circle = cell.querySelector('.circle');
                 if (circle) {
                     circle.style.backgroundColor = item.color;
-                    localStorage.setItem(`FM${item.index}`, item.color);
+                    localStorage.setItem(`arche_colorM${item.index}`, item.color);
                     updateCircleText(circle, item.color, Math.floor((item.index - 1) / COLUMNS));
                 }
             });
@@ -300,7 +300,7 @@
                 if (circle) {
                     circle.style.backgroundColor = 'red';
                     updateCircleText(circle, 'red', Math.floor(i / COLUMNS));
-                    localStorage.setItem(`FM${i + 1}`, 'red');
+                    localStorage.setItem(`arche_colorM${i + 1}`, 'red');
                 }
             }
         }
